--- a/docs/styles.css
+++ b/docs/styles.css
@@ -21,8 +21,7 @@ a:active {
 }
 
 .elevate {
-  box-shadow: 0 6.4px 14.4px 0 rgba(0, 0, 0, 0.132),
-    0 1.2px 3.6px 0 rgba(0, 0, 0, 0.108);
+  box-shadow: 0 6.4px 14.4px 0 rgba(0, 0, 0, 0.132), 0 1.2px 3.6px 0 rgba(0, 0, 0, 0.108);
 }
 
 .logo-container {
